[package]
name = "wasm-multi"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.2.1"

bevy = { version = "0.15.3", features = ["dynamic_linking", "webgl2"] }
bevy_ecs_ldtk = {version = "0.11.0", features = [ "atlas" ]}

bevy_ggrs = { version = "0.17", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.11", features = ["ggrs"] }

